fixed fonts, brighter marked/published/selected colors and colored border, fixed spacing

--- a/feedly.css
+++ b/feedly.css
@@ -1,40 +1,62 @@
 @import url(feedly/claro-mod.min.css);
 
-@font-face {
-    font-family: 'SansCn';
-    src: local('Arial Narrow'),
-         local('Liberation Sans Narrow'),
-         url('feedly/fonts/texgyreheroscn-regular-webfont.woff') format('woff'),
-         url('feedly/fonts/texgyreheroscn-regular-webfont.ttf') format('truetype');
-}
+/*
+@font-face format for multiple browser support with local fonts preferred:
+
+	font-family: 'SansCn';                          // Same name for all variants, we don't want faux-bold and faux-italic
+	font-style: normal;                             // style and weight are delared here, not in the font family name
+	font-weight: bold;
+	src: local('HelveticaNeue-CondensedBold'),      // Mac only font
+		local('Arial Narrow Bold'),                 // Windows, Firefox assumes style/weight in the name and will use this declaration
+		local('Arial Narrow'),                      // Windows, Chrome won't find 'Arial Narrow Bold' and fall back to this declaration
+		local('Liberation Sans Narrow Bold'),       // Same for Linux, Liberation Sans Narrow is a perfect, widely used equivalent
+		local('Liberation Sans Narrow'),            // Fallback for WebKit browsers
+		url('feedly/fonts/texgyreheroscn-bold-webfont.woff') format('woff'),       // ... if no local font is found, use the webfont
+		url('feedly/fonts/texgyreheroscn-bold-webfont.ttf') format('truetype');    // woff and ttf are enough; we don't support oldIEs
+*/
 
 @font-face {
-    font-family: 'SansCn';
-    src: local('HelveticaNeue-CondensedBold'),
-         local('Arial Narrow'),
-         local('Liberation Sans Narrow'),
-         url('feedly/fonts/texgyreheroscn-bold-webfont.woff') format('woff'),
-         url('feedly/fonts/texgyreheroscn-bold-webfont.ttf') format('truetype');
-    font-weight: bold;
+	font-family: 'SansCn';
+	font-style: normal;
+	font-weight: normal;
+	src: local('Arial Narrow'),
+		local('Liberation Sans Narrow'),
+		url('feedly/fonts/texgyreheroscn-regular-webfont.woff') format('woff'),
+		url('feedly/fonts/texgyreheroscn-regular-webfont.ttf') format('truetype');
 }
-
 @font-face {
-    font-family: 'SansCn';
-    src: local('Arial Narrow'),
-         local('Liberation Sans Narrow'),
-         url('feedly/fonts/texgyreheroscn-italic-webfont.woff') format('woff'),
-         url('feedly/fonts/texgyreheroscn-italic-webfont.ttf') format('truetype');
-    font-style: italic;
+	font-family: 'SansCn';
+	font-style: normal;
+	font-weight: bold;
+	src: local('HelveticaNeue-CondensedBold'),
+		local('Arial Narrow Bold'),
+		local('Arial Narrow'),
+		local('Liberation Sans Narrow Bold'),
+		local('Liberation Sans Narrow'),
+		url('feedly/fonts/texgyreheroscn-bold-webfont.woff') format('woff'),
+		url('feedly/fonts/texgyreheroscn-bold-webfont.ttf') format('truetype');
 }
-
 @font-face {
-    font-family: 'SansCn';
-    src: local('Arial Narrow'),
-         local('Liberation Sans Narrow'),
-         url('feedly/fonts/texgyreheroscn-bolditalic-webfont.woff') format('woff'),
-         url('feedly/fonts/texgyreheroscn-bolditalic-webfont.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
+	font-family: 'SansCn';
+	font-style: italic;
+	font-weight: normal;
+	src: local('Arial Narrow Italic'),
+		local('Arial Narrow'),
+		local('Liberation Sans Narrow Italic'),
+		local('Liberation Sans Narrow'),
+		url('feedly/fonts/texgyreheroscn-italic-webfont.woff') format('woff'),
+		url('feedly/fonts/texgyreheroscn-italic-webfont.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'SansCn';
+	font-style: italic;
+	font-weight: bold;
+	src: local('Arial Narrow Bold Italic'),
+		local('Arial Narrow'),
+		local('Liberation Sans Narrow Bold Italic'),
+		local('Liberation Sans Narrow'),
+		url('feedly/fonts/texgyreheroscn-bolditalic-webfont.woff') format('woff'),
+		url('feedly/fonts/texgyreheroscn-bolditalic-webfont.ttf') format('truetype');
 }
 
 
@@ -468,7 +490,7 @@ a:hover {
 #main-toolbar {
 	float: right;
 	width: auto;
-	padding: 15px 0 6px;
+	padding: 15px 0 5px;
 	border: 0;
 }
 #ttrssMain #main {
@@ -725,7 +747,7 @@ a:hover {
 #headlines-toolbar {
 	z-index: 3;
 	overflow: visible;
-	padding: 17px 30px 0;
+	padding: 16px 30px 0;
 	width: auto !important;
 	min-height: 25px;
 	text-align: right;
@@ -734,12 +756,6 @@ a:hover {
 	font-size: 0;
 	white-space: nowrap;
 }
-#headlines-toolbar > * {
-	font-size: 12px;
-	line-height: 16px;
-	vertical-align: top;
-	color: #b2b2b2;
-}
 #headlines-toolbar:after {
 	content: "";
 	position: absolute;
@@ -747,6 +763,11 @@ a:hover {
 	right: 35px;
 	left: 25px;
 	border-top: 1px solid #d4d4d4;
+}
+#headlines-toolbar > * {
+	font-size: 12px;
+	vertical-align: middle;
+	color: #b2b2b2;
 }
 #headlines-toolbar > a {
 	text-decoration: none;
@@ -757,7 +778,7 @@ a:hover {
 	color: #444;
 }
 #headlines-toolbar .dijitSelect {
-	margin: -2px 0 0 10px;
+	margin: 0 0 0 10px;
 }
 #headlines-toolbar > .r {
 	float: left;
@@ -775,13 +796,14 @@ a:hover {
 #feed_title,
 #feed_title a {
 	color: #444;
-	font: normal normal bold 16px/14px SansCn;
+	font: normal normal bold 16px/18px SansCn;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 }
 #selected_prompt {
 	float: right;
 	position: relative;
+	top: 1px;
 	left: 10px;
 }
 #content-insert {
@@ -826,7 +848,7 @@ a:hover {
 #floatingTitle {
 	position: absolute;
 	z-index: 4;
-	top: 37px;
+	top: 36px;
 	right: 34px;
 	left: 24px;
 	background: #fff;
@@ -847,7 +869,7 @@ a:hover {
 .cdm.expandable,
 .hl,
 #headlines-spacer {
-	border-top: 1px solid rgba(0,0,0,.067);
+	border-top: 1px solid #eee;
 }
 .cdm.expandable.active + #headlines-spacer,
 .cdm.expanded + #headlines-spacer {
@@ -999,15 +1021,33 @@ a:hover {
 }
 .cdm.expandable.marked:not(.active),
 .hl.marked {
-	background: #e8f8e5;
+	background: #eafbe2;
 }
 .cdm.expandable.published:not(.active),
 .hl.published {
-	background: #ffecda;
+	background: #ffeed9;
 }
 .cdm.expandable.Selected:not(.active),
 .hl.Selected {
-	background: #fcf8d5;
+	background: #fffbd4;
+}
+.cdm.expandable.marked:not(.active),
+.cdm.expandable.marked:not(.active) + .cdm,
+.hl.marked,
+.hl.marked + .hl {
+	border-top-color: #aca;
+}
+.cdm.expandable.published:not(.active),
+.cdm.expandable.published:not(.active) + .cdm,
+.hl.published,
+.hl.published + .hl {
+	border-top-color: #eba;
+}
+.cdm.expandable.Selected:not(.active),
+.cdm.expandable.Selected:not(.active) + .cdm,
+.hl.Selected,
+.hl.Selected + .hl {
+	border-top-color: #dc9;
 }
 
 /* single-line previews */
